test/files/pos/t8664.scala
object Test extends App {
  Ordering[Symbol]
  Seq(sym"b", sym"c", sym"a").sorted
}
