test/files/neg/t10700-message/usage_2.scala

object usage extends App {
  println(scala.testing.Macros.m[Int])
}
